--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -7,19 +7,13 @@ body {
   font-family: 'Titillium Web', sans-serif;
   display: flex;
   flex-direction: column;
+  margin: 0;
 }
 
 #root {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-h1, h2 {
-  color: #93005a;
-}
-
-#root {
   width: 100%;
   overflow-y: auto;
   border-top: 1px solid grey;
@@ -28,9 +22,17 @@ h1, h2 {
   padding-bottom: 2rem;
 }
 
+h1, h2 {
+  color: #93005a;
+}
+
 header, footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 1rem;
+}
+
+section {
   padding: 1rem;
 }
